finalized section one. 'Select Product and Add Product' 25/10

--- a/index.html
+++ b/index.html
@@ -11,20 +11,29 @@
         <h1>AMOBLAMIENTOS JR</h1>
     </section>
     <section>
-        <div class="select-product">
+        <div class="select-product close">
             <h2>Seleccionar Producto</h2>
-            <select>
-                <option disabled selected value=""> Seleccionar Producto</option>
-                <option value="">mueble a</option>
-                <option value=""> mueble b</option>
-                <option value="">silla a</option>
-                <option value="">silla b</option>
-            </select>
-            <h3>name for product</h3>
-            <div>
-                <button id="see-stock">Ver Stock</button>
-                <button id="update-stock">Actualizar Stock</button>
+            <div class="select-button">
+                <select>
+                    <option disabled selected value=""> Seleccionar Producto</option>
+                    <option value="">mueble a</option>
+                    <option value=""> mueble b</option>
+                    <option value="">silla a</option>
+                    <option value="">silla b</option>
+                </select>
+                <button id="enter">
+                </button>
             </div>
+            <div class="product">
+                <h3>name for product</h3>
+                <div>
+                    <button id="see-stock">Ver Stock</button>
+                    <button id="update-stock">Actualizar Stock</button>
+                </div>
+            </div>
+        </div>
+        <div class="add-product">
+            <button> Agregar nuevo producto</button>
         </div>
 
     </section>
