--- a/index.html
+++ b/index.html
@@ -37,6 +37,52 @@
         </div>
 
     </section>
-    <section></section>
+    <section id="products">
+        <div class="display-product">
+            <h3>Mueble Esquinero 1</h3>
+            <h4>Datos del Producto</h4>
+            <div class="date-product">
+                <div class="quantity-of-product">
+                    <span>Cantidad del Producto en Stock</span>
+                    <h5>5</h5>
+                </div>
+                <div class="product-cost">
+                    <span>Costo del Producto</span>
+                    <h5>$20500</h5>
+                </div>
+                <div class="sale-value">
+                    <span>Valor de venta</span>
+                    <h5>$35000</h5>
+                </div>
+            </div>
+            <h4>Estadisticas de los ultimos 30 dias</h4>
+            <div class="statistics30">
+                <div class="sale-last-30">
+                    <span>Ventas en los ultimos 30 dias</span>
+                    <h5>15</h5>
+                </div>
+                <div class="gross-profit">
+                    <span>Ganancia Bruta</span>
+                    <h5>$350000</h5>
+                </div>
+                <div class="net-profit">
+                    <span>Ganancia Neta</span>
+                    <h5>$145000</h5>
+                </div>
+                <div class="profit-margin">
+                    <span>Margen de ganancia</span>
+                    <h5>%41</h5>
+                </div>
+            </div>
+            <div class="button">
+                <div class="sales-history">
+                    <button>Historial de Ventas</button>
+                </div>
+                <div class="more-statistics">
+                    <button>Ver Mas Estadisticas</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
