Starting Select Element 26/10

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="select-button">
                 <select>
                     <option disabled selected value=""> Seleccionar Producto</option>
+                    <option value="0">mueble A</option>
                 </select>
                 <button id="enter">
                 </button>
